--- a/Graph/Graph.csproj
+++ b/Graph/Graph.csproj
@@ -42,6 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Items\NodeDropDownItem.cs" />
+    <Compile Include="SelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectionForm.Designer.cs">
+      <DependentUpon>SelectionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ElementType.cs" />
     <Compile Include="GraphConstants.cs" />
     <Compile Include="GraphControl.cs">
@@ -51,6 +58,7 @@
       <DependentUpon>GraphControl.cs</DependentUpon>
     </Compile>
     <Compile Include="IElement.cs" />
+    <Compile Include="Items\NodeTextBoxItem.cs" />
     <Compile Include="Items\NodeCheckboxItem.cs" />
     <Compile Include="Items\NodeColorItem.cs" />
     <Compile Include="Items\NodeImageItem.cs" />
@@ -64,6 +72,20 @@
     <Compile Include="GraphRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderState.cs" />
+    <Compile Include="TextEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextEditForm.Designer.cs">
+      <DependentUpon>TextEditForm.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SelectionForm.resx">
+      <DependentUpon>SelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TextEditForm.resx">
+      <DependentUpon>TextEditForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
