Ignoring /Graph/obj

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /GraphExample/GraphExample.csproj.user
 /Graph/bin/Debug/Graph.dll
 /Graph/bin/Debug/Graph.pdb
+/Graph/obj
 /Graph/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /Graph/obj/Debug/Graph.csproj.FileListAbsolute.txt
 /Graph/obj/Debug/Graph.dll
