--- a/Graph/Graph.csproj
+++ b/Graph/Graph.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compatibility\AlwaysCompatible.cs" />
+    <Compile Include="Compatibility\NeverCompatible.cs" />
+    <Compile Include="Compatibility\ICompatibilityStrategy.cs" />
+    <Compile Include="Compatibility\TagTypeCompatibility.cs" />
     <Compile Include="Items\NodeNumericSliderItem.cs" />
     <Compile Include="NodeSelection.cs" />
     <Compile Include="Items\NodeDropDownItem.cs" />
